NetBSD Problem Report #42568
From www@NetBSD.org Sat Jan 2 21:39:19 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id E0B9C63C37E
for <gnats-bugs@gnats.NetBSD.org>; Sat, 2 Jan 2010 21:39:19 +0000 (UTC)
Message-Id: <20100102213919.AB9D963B844@www.NetBSD.org>
Date: Sat, 2 Jan 2010 21:39:19 +0000 (UTC)
From: dave@turbocat.de
Reply-To: dave@turbocat.de
To: gnats-bugs@NetBSD.org
Subject: squid complains: IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL)
X-Send-Pr-Version: www-1.0
>Number: 42568
>Category: pkg
>Synopsis: squid complains: IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL)
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: tron
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Jan 02 21:40:00 +0000 2010
>Closed-Date: Sat Apr 27 22:12:39 +0000 2013
>Last-Modified: Sat Apr 27 22:12:39 +0000 2013
>Originator: David Wetzel
>Release: NetBSD 5.0_STABLE
>Organization:
>Environment:
NetBSD hilly 5.0_STABLE NetBSD 5.0_STABLE (SLIMALIX51) #2: Sat Jan 2 22:17:51 CET 2010 dave@netbsd5:/usr/src/sys/arch/i386/compile/SLIMALIX51 i386
>Description:
I am using squid-3.1.0.15 from pkgsrc as transparent proxy.
my pf.conf is:
rdr pass on vr0 proto tcp to port 80 -> 127.0.0.1 port 3128
.../squid/logs/cache.log is full of those:
2010/01/02 13:34:10| IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL)
2010/01/02 13:34:10| IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL)
>How-To-Repeat:
>Fix:
maybe
http://www1.cl.squid-cache.org/Versions/v3/HEAD/changesets/b9610.patch
?
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: pkg-manager->tron
Responsible-Changed-By: obache@NetBSD.org
Responsible-Changed-When: Tue, 05 Jan 2010 06:29:15 +0000
Responsible-Changed-Why:
Over to maintainer.
State-Changed-From-To: open->suspended
State-Changed-By: tron@NetBSD.org
State-Changed-When: Wed, 06 Jan 2010 12:05:46 +0000
State-Changed-Why:
This is not a "pkgsrc" bug, it is a bug in Squid 3.1 itself. Please report
the bug upstream via <http://bugs.squid-cache.org>.
The change-list mentioned in the PR is not going to help as the current
version of the "squid31" package already contains this change.
Please let us know when the Squid maintainers come up with a patch and
we will integrate it into "pkgsrc".
From: Matthias Scheler <tron@NetBSD.org>
To: NetBSD GNATS <gnats-bugs@NetBSD.org>
Cc:
Subject: Re: pkg/42568 (squid complains: IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL))
Date: Wed, 3 Feb 2010 13:51:57 +0000
On Wed, Jan 06, 2010 at 12:05:47PM +0000, tron@NetBSD.org wrote:
> Synopsis: squid complains: IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL)
>
> State-Changed-From-To: open->suspended
> State-Changed-By: tron@NetBSD.org
> State-Changed-When: Wed, 06 Jan 2010 12:05:46 +0000
> State-Changed-Why:
> This is not a "pkgsrc" bug, it is a bug in Squid 3.1 itself. Please report
> the bug upstream via <http://bugs.squid-cache.org>.
>
> The change-list mentioned in the PR is not going to help as the current
> version of the "squid31" package already contains this change.
>
> Please let us know when the Squid maintainers come up with a patch and
> we will integrate it into "pkgsrc".
The bug has been reported to the Squid maintainers:
http://bugs.squid-cache.org/show_bug.cgi?id=2842
It doesn't look like it was fixed in 3.1.0.16.
Kind regards
--
Matthias Scheler http://zhadum.org.uk/
From: "Matthias Scheler" <tron@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/42568 CVS commit: pkgsrc/www/squid3
Date: Sat, 27 Apr 2013 17:51:24 +0000
Module Name: pkgsrc
Committed By: tron
Date: Sat Apr 27 17:51:24 UTC 2013
Modified Files:
pkgsrc/www/squid3: Makefile distinfo
pkgsrc/www/squid3/patches: patch-src_ip_Intercept.cc
Log Message:
Update "squid3" package to version 3.3.4. Changes since 3.3.3:
- Bug 3831: basic_ncsa_auth Blowfish and SHA support
- Bug 3816: SSL_get_certificate call inside Ssl::verifySslCertificate crashes
- Bug 3794: MacOS: workaround compiler errors and case-insensitivity
- Bug 3781: Proxy Authentication not sent to cache_peer
- Bug 3720 pt1: SourceLayout: shuffle fd_table definition into fde.h
- Bug 3720 pt2: Add missing include in /dev/poll I/O module
- Bug 3674: Improve compiler detection, better support warnings-as-errors on clang
- Add support for TPROXY on BSD
- Fix SSL Bump bypass for intercepted traffic
- Fix memory leaks in ConnStateData pinning
- Fix external_acl.cc "inBackground" assertion on queue overloads
- CacheMgr: fix missing column separator in helper stats
- OpenBSD: libpthreads requires OpenBSD 5.2 or later
- ... and lots of documentation updates
- ... and all changes from squid 3.2.10
This update might fix PR pkg/42568.
To generate a diff of this commit:
cvs rdiff -u -r1.6 -r1.7 pkgsrc/www/squid3/Makefile
cvs rdiff -u -r1.5 -r1.6 pkgsrc/www/squid3/distinfo
cvs rdiff -u -r1.1 -r1.2 pkgsrc/www/squid3/patches/patch-src_ip_Intercept.cc
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: suspended->feedback
State-Changed-By: tron@NetBSD.org
State-Changed-When: Sat, 27 Apr 2013 17:59:59 +0000
State-Changed-Why:
Can you please try with version 3.3.4 of the "squid3" package? It contains
fixes for transparent proxy support under BSD.
From: David Wetzel <dave@turbocat.de>
To: gnats-bugs@NetBSD.org
Cc: tron@NetBSD.org,
pkgsrc-bugs@netbsd.org,
gnats-admin@netbsd.org
Subject: Re: pkg/42568 (squid complains: IpIntercept.cc(277) IpfInterception: NAT lookup failed: ioctl(SIOCGNATL))
Date: Sat, 27 Apr 2013 17:10:49 -0400
Sorry, I am not using squid anymore.
David Wetzel
Am 27.04.2013 um 14:00 schrieb tron@NetBSD.org:
> Synopsis: squid complains: IpIntercept.cc(277) IpfInterception: NAT =
lookup failed: ioctl(SIOCGNATL)
>=20
> State-Changed-From-To: suspended->feedback
> State-Changed-By: tron@NetBSD.org
> State-Changed-When: Sat, 27 Apr 2013 17:59:59 +0000
> State-Changed-Why:
> Can you please try with version 3.3.4 of the "squid3" package? It =
contains
> fixes for transparent proxy support under BSD.
>=20
>=20
>=20
State-Changed-From-To: feedback->closed
State-Changed-By: tron@NetBSD.org
State-Changed-When: Sat, 27 Apr 2013 22:12:39 +0000
State-Changed-Why:
The originator of this problem report can no longer test a fix as he
is not using Squid any more.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.36 2007/11/24 03:27:39 kano Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.