PR/42568: Pedro F. Giffuni: Better signal handling from OpenBSD, but simplified.